# penguinlang

./: .gitignore  README.md  env usage notes  main.asm  out.gb  pyproject.toml  requirements.txt  setup.cfg  setup.sh  tox.ini
.github/workflows/: ci.yml.txt  python-app.yml
examples/: BinaryTest.peg  BinaryTestComp.peg  FunctionTest.peg  IfTest.peg  arkanoid.peg  test.peg  testtest.peg
examples/SpriteMovementExample/: Main.peg  tileset_block_0_v2.2bpp  tileset_block_1_v2.2bpp
examples/Unbricked/: unbricked_tileset.2bpp
src/: IRProgram.py  IRRewriter.py  LinearScanner.py  LivenessAnalyzer.py  PredefinedFsAndVs.py  RegisterAllocater.py  RegisterAllocator.py  ast.py  astClasses.py  astGenerator.py  astTypeChecker.py  astTypes.py  ast_classes.py  ast_generator.py  asttype_checker.py  asttypes.py  cli.py  codegen.py  codegenACTUAL.py  codegenRegisters.py  compiler.py  customErrors.py  custom_errors.py  ir_implementation.py  logger.py  main.py  predefinedVnF.py  predefinesVnF.py  type_checker.py  types.py
src/compiler/: cli.py
src/grammar/: penguin.g4
src/scripts/: build.sh
tests/: AST_Testing.py  new.py  romtester.py  test_E2E.py  test_ast.py  test_taast.py  test_taast_integration.py  tester.py
tests/roms/: rom_test_example.gb
tests/src/: astTests.py  taastTests.py
tests/test_files/: tileset.2bpp  tileset_block_0.2bpp  tileset_block_1.2bpp  tileset_block_2.2bpp
