[project]
name = "penguincompiler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "antlr4-tools",
    "antlr4-python3-runtime",
    "pytest",
    "rich",  # Coloured CLI (Command Line Interface) output
    "typer"  # CLI argument handling
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"